[metadata]
name = xdbutils
version = 0.0.2
author = Henrik Thomsen
author_email = henrik.thomsen.dk@gmail.dk
description = Utilities for Databricks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/henrikbulldog/xdbutils
project_urls =
    Bug Tracker = https://github.com/henrikbulldog/xdbutils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
